<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>BeNine</groupId>
	<artifactId>backend</artifactId>
	<version>0.0.1</version>
<properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<pmd.plugin.version>3.6</pmd.plugin.version>
		<findbugs.plugin.version>3.0.2</findbugs.plugin.version>     
		<checkstyle.plugin.version>2.17</checkstyle.plugin.version>
		<cameramodule.version>0.0.1</cameramodule.version>
		<databasemodule.version>0.0.1</databasemodule.version>
   </properties>
   <dependencies>
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.12</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>2.0.49-beta</version>
      </dependency>
      <dependency>
	<groupId>org.mock-server</groupId>
		<artifactId>mockserver-netty</artifactId>
		<version>3.10.2</version>
		<scope>test</scope>
       </dependency>
	  <dependency>
		<groupId>com.googlecode.json-simple</groupId>
		<artifactId>json-simple</artifactId>
		<version>1.1</version>
	  </dependency>
   </dependencies>
   <build>
      <plugins>
<plugin>
      <!-- Build an executable JAR -->
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-jar-plugin</artifactId>
      <version>2.6</version>
      <configuration>
        <archive>
          <manifest>
            <addClasspath>true</addClasspath>
            <mainClass>com.benine.backend.Main</mainClass>
          </manifest>
        </archive>
      </configuration>
    </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.5.1</version>
            <configuration>
               <source>1.8</source>
               <target>1.8</target>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>${checkstyle.plugin.version}</version>
            <configuration>
               <failOnViolation>true</failOnViolation>
               <configLocation>../checkstyle.xml</configLocation>
            </configuration>
            <executions>
               <execution>
                  <id>verify-style</id>
                  <phase>process-classes</phase>
                  <goals>
                     <goal>check</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.19.1</version>
            <configuration>
            	<systemPropertyVariables>
    					<logback.configurationFile>${basedir}/logback.xml</logback.configurationFile>
				</systemPropertyVariables>
			</configuration>
         </plugin>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>cobertura-maven-plugin</artifactId>
            <version>2.7</version>
         </plugin>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>findbugs-maven-plugin</artifactId>
            <version>${findbugs.plugin.version}</version>
            <configuration>
               <failOnError>false</failOnError>
            </configuration>
            <executions>
               <execution>
                  <id>verify-findbugs</id>
                  <phase>process-classes</phase>
                  <goals>
                     <goal>check</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-pmd-plugin</artifactId>
            <version>${pmd.plugin.version}</version>
            <configuration>
               <format>xml</format>
            </configuration>
            <executions>
               <execution>
                  <id>verify-pmd</id>
                  <phase>process-classes</phase>
                  <goals>
                     <goal>pmd</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>
   <reporting>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>${checkstyle.plugin.version}</version>
            <configuration>
               <configLocation>../checkstyle.xml</configLocation>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.18.1</version>
         </plugin>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>cobertura-maven-plugin</artifactId>
            <version>2.7</version>
         </plugin>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>findbugs-maven-plugin</artifactId>
            <version>${findbugs.plugin.version}</version>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-pmd-plugin</artifactId>
            <version>${pmd.plugin.version}</version>
         </plugin>
      </plugins>
   </reporting>
</project>
